Remove remaining strerror() calls from core - refs #1297